@@ -1,3 +1,4 @@
+* Set CompAux in starting balance of FEC
 * Update chart to new tax code definition
 * Allow to export FEC on draft fiscalyear
 
